# SPL-Token-Solana

./: Anchor.toml  Cargo.toml  README.md  airdrop_proofs.json  anchor-mint-tokens.js  change-mint-authority.js  create-vault-account.ts  generate-merkle-tree.cjs  mint-tokens.js  package-lock.json  package.json  spl-transfer.js  transfer-mint-authority.js
MerkleTree/: createMerkleProof.js  createMerkleTree.js  generatedProofData.json  proofs.json  tree.json  whitelistValues.json
programs/merkle_airdrop/: Cargo.toml
programs/merkle_airdrop/src/: lib.rs
programs/token_program/: Cargo.toml
programs/token_program/src/: lib.rs
scripts/: generateMerkleTree.js
tests/: claim_tokens.ts  merkle_airdrop.ts  set-mint-authority.ts  token_program.ts
types/: svm-merkle-tree.d.ts
