[package]
name = "merkle_airdrop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_airdrop"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
svm-merkle-tree = { git = "https://github.com/deanmlittle/svm-merkle-tree", version = "0.1.1", features = ["solana", "standard"] }
zeroize = { version = "1.7", default-features = false }
